{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 95,
  "lineage": "2420f9f9-8f2c-888e-04e3-05463e4e81ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dest_to_source_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0522aea2f0ea3bea83322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0522aea2f0ea3bea8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0cc0e3323f138c61b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "source_to_dest_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01172c0490edfac37519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01172c0490edfac37",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0cc0e3323f138c61b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "source_to_dest_route_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.10.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0aa7b4f8cbd7b4810519371977",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0aa7b4f8cbd7b4810",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0cc0e3323f138c61b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0cc0e3323f138c61b",
            "peer_owner_id": "852035851425",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-052fe5dca85ae963c",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "Production",
              "Name": "VPC-Peering"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "VPC-Peering"
            },
            "vpc_id": "vpc-01464ddd643fe1d41"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_options",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "id": "pcx-0cc0e3323f138c61b",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": true
              }
            ],
            "vpc_peering_connection_id": "pcx-0cc0e3323f138c61b"
          },
          "dependencies": [
            "aws_vpc_peering_connection.this"
          ]
        }
      ]
    }
  ]
}